@@ -1,4 +1,4 @@
-@comment $NetBSD: PLIST,v 1.3 2004/03/10 12:58:13 taya Exp $
+@comment $NetBSD: PLIST,v 1.4 2004/06/18 22:40:04 xtraeme Exp $
 bin/${MOZILLA}
 @comment begin PROGRAMS
 lib/${MOZILLA}/${MOZILLA_BIN}
@@ -105,6 +105,14 @@ lib/${MOZILLA}/libxpcom_compat.${SO_SUFFIX}
 lib/${MOZILLA}/libxpistub.${SO_SUFFIX}
 ${SUNOSLIB}lib/${MOZILLA}/libfreebl_hybrid_3.${SO_SUFFIX}
 @comment end DSO
+@comment begin PKGCONFIG
+lib/pkgconfig/mozilla-gtkmozembed.pc
+lib/pkgconfig/mozilla-js.pc
+lib/pkgconfig/mozilla-nspr.pc
+lib/pkgconfig/mozilla-nss.pc
+lib/pkgconfig/mozilla-plugin.pc
+lib/pkgconfig/mozilla-xpcom.pc
+@comment end PKGCONFIG
 @comment begin DATA
 lib/${MOZILLA}/bloaturls.txt
 lib/${MOZILLA}/chrome/US.jar
