@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.6225 2004/06/18 02:26:05 minskim Exp $
+$NetBSD: CHANGES,v 1.6226 2004/06/18 22:40:04 xtraeme Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -2959,3 +2959,6 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated metamail to 2.7nb6 [minskim 2004-06-17]
 	Updated sylpheed to 0.9.12 [chris 2004-06-17]
 	Updated xconq to 7.4.1nb3 [minskim 2004-06-18]
+	Updated mozilla to 1.6nb3 [xtraeme 2004-06-18]
+	Updated firefox-gtk2 to 0.8nb4 [xtraeme 2004-06-18]
+	Updated firefox to 0.8nb4 [xtraeme 2004-06-18]
